--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "validation",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "validation"
@@ -13,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.5.0",
     "mocha": "^3.0.2"
   }
 }
