apply coverage test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
   "parserOptions": {
-    "sourceType": "module",
     "ecmaVersion": 6,
     "ecmaFeatures": {
       "binaryLiterals": true,
@@ -8,6 +7,7 @@
       "defaultParams": true,
       "forOf": true,
       "generators": true,
+      "impliedStrict": true,
       "modules": true,
       "objectLiteralComputedProperties": true,
       "objectLiteralDuplicateProperties": true,
@@ -18,17 +18,21 @@
       "regexYFlag": true,
       "templateStrings": true,
       "unicodeCodePointEscapes": true,
-      "jsx": false
-    }
+      "jsx": true
+    },
+    "parser": "esprima",
+    "sourceType": "module"
   },
+
   "env": {
-    "browser": true,
+    "es6": true,
     "node": true,
-    "es6": true
+    "browser": true
   },
 
   "globals": {
-
+    "describe": true,
+    "it": true
   },
 
   "plugins": [
@@ -44,21 +48,25 @@
     "id-length": 0,
     "indent": [
       "error",
-      2, {
+      2,
+      {
         "SwitchCase": 1
       }
     ],
     "init-declarations": 0,
+    "line-comment-position": 0,
     "max-len": [
-      "error", {
+      "error",
+      {
         "code": 120,
         "ignoreTrailingComments": true,
         "ignoreComments": true,
         "ignoreUrls": true
       }
     ],
+
     "max-lines": 0,
-    "max-params": ["error", 5],
+    "max-params": ["error", 4],
     "max-statements": 0,
     "multiline-ternary": 0,
     "newline-after-var": 0,
@@ -85,7 +93,8 @@
     "prefer-template": 0,
     "quotes": [
       "error",
-      "single", {
+      "single",
+      {
         "allowTemplateLiterals": true
       }
     ],
@@ -93,10 +102,10 @@
       "error", "as-needed"
     ],
     "require-jsdoc": 0,
-    "sort-keys": 0,
     "space-before-function-paren": [
       "error", "never"
     ],
+    "sort-keys": 0,
     "vars-on-top": 0
   }
 }
